--- a/www/settings.html
+++ b/www/settings.html
@@ -529,6 +529,7 @@
                             </label>
                             <label for="polling" class="mdl-textfield__label translate" id="SETTINGS_POLLING"></label>
                             <ul for="polling" class="mdl-menu mdl-menu--bottom-left mdl-js-menu" id="pollingList">
+                                <li class="mdl-menu__item translate" data-val="10" id="INTERVAL_10"></li>
                                 <li class="mdl-menu__item translate" data-val="30" id="INTERVAL_30"></li>
                                 <li class="mdl-menu__item translate" data-val="60" id="INTERVAL_60"></li>
                                 <li class="mdl-menu__item translate" data-val="300" id="INTERVAL_300"></li>
