add shorter interval (every 5s)

--- a/www/settings.html
+++ b/www/settings.html
@@ -531,6 +531,7 @@
                             </label>
                             <label for="polling" class="mdl-textfield__label translate" id="SETTINGS_POLLING"></label>
                             <ul for="polling" class="mdl-menu mdl-menu--bottom-left mdl-js-menu" id="pollingList">
+                                <li class="mdl-menu__item translate" data-val="5" id="INTERVAL_5"></li>
                                 <li class="mdl-menu__item translate" data-val="10" id="INTERVAL_10"></li>
                                 <li class="mdl-menu__item translate" data-val="30" id="INTERVAL_30"></li>
                                 <li class="mdl-menu__item translate" data-val="60" id="INTERVAL_60"></li>
